# SHADOW-SYSTEMS

./: .env.example  .gitignore  .replit  Dockerfile  README.md  bot.py  cms_config.json  config.py  docker-compose.yml  final_status.md  main.py  pyproject.toml  replit.md  requirements.txt  shadow_security.db  simple_bot.py
.hex/: cache.ets
api/: main.py
attached_assets/: Pasted---1766570595736_1766570595737.txt  Pasted---1766570615901_1766570615902.txt  Pasted---1766570633452_1766570633453.txt  Pasted---1766753318294_1766753318295.txt  Pasted---1766754571748_1766754571749.txt  Pasted--1-AI-Enhanced-Pattern-Detection-python-ai-pattern-dete_1766832265224.txt  Pasted--8-Handlers-UI--1766762186493_1766762186494.txt  Pasted--OSINT--1766751697483_1766751697483.txt  Pasted--Python-python-emergenc-1766754585963_1766754585963.txt  Pasted--ROOT-ADMIN--1766752487059_1766752487060.txt  Pasted--ROOT-ADMIN-Super-Admin-ROOT--1766756134443_1766756134443.txt  Pasted--SHADOW-SYSTEM-V2-0--1766502182494_1766502182495.txt  Pasted--SHADOW-SYSTEM-v2-0--1766597623056_1766597623057.txt  Pasted--Shadow-System-V2-0--1766570686536_1766570686537.txt  Pasted--Shadow-System-V2-0--1766570692971_1766570692972.txt  Pasted--User-Telegram-Mini-App-Shadow-Security--1766411935925_1766411935927.txt  Pasted--config--1766598767235_1766598767236.txt  Pasted--core-enhanced-monitoring-py--1766855392280_1766855392282.txt  Pasted--python-from-aiogram-import-Router-F-from-aiogram-types_1766844584550.txt  Pasted-12-27-15-40-06-ERROR-aiogram-dispatcher-Failed-to-fetch_1766843039476.txt  текст456_1766843302498.txt  (+1 more)
(+162 files in other folders)
